[metadata]
name = raincoat-umbrella
description = "This package is an exemple package to showcase Raincoat."
version = 2.0.0
author = Joachim Jablon
author_email = ewjoachim@gmail.com
url = https://github.com/ewjoachim/umbrella
long_description = file: README.rst
license = WTFPL
keywords = code, diff, copy-paste, linter, DRY
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    umbrella = umbrella:main
